Meals and documentation to swagger added
